[package]
name = "login_server_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

#Database
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

#Networking
bytes = "1.5"
byteorder = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#Error handling
anyhow = "1.0"
thiserror = "1.0"

lazy_static = "1.4"
parking_lot = "0.12"
chrono = "0.4.42"
[dev-dependencies]
tokio-test = "0.4"
